# When-Seoul-Was-Built

./: .gitignore  README.md  pyproject.toml
configs/: age_bands.yml
docs/: age-layer-method.md  project-brief.md
outputs/: README.md
scripts/: build_seoul_age_layer.py  inventory_source_data.py  render_static_map.py
